# HT1632

./: .gitignore  CMakeLists.txt  HT1632.cpp  HT1632.h  Print.cpp  Print.h  README.md  bit_array.h  main.cpp
Modules/: FindWiringPi.cmake
examples/basicdemo/: CMakeLists.txt  basicdemo.cpp
examples/clear/: CMakeLists.txt  clear.cpp
examples/matrixdemo/: CMakeLists.txt  matrixdemo.cpp
examples/matrixshapes/: CMakeLists.txt  matrixshapes.cpp
